posts/2022-07-12-local-k8s-cluster-with-k3d/k8s-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-server
        image: my-hello-server
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
