posts/2022-07-12-local-k8s-cluster-with-k3d/k8s-resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: hello
  labels:
    app: hello
spec:
  containers:
  - name: hello-server
    image: my-hello-server
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8000
