posts/2022-07-12-local-k8s-cluster-with-k3d/k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: hello
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: hello
