posts/2022-07-12-local-k8s-cluster-with-k3d/k8s-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test
  name: hello
spec:
  rules:
    - host: hello.127.0.0.1.sslip.io
      http:
        paths:
          - backend:
              service:
                name: hello
                port:
                  name: http
            path: /
            pathType: Prefix
